Spaced out spacing of .detail class to prevent text from rendering on top of other details

--- a/media/css/codernote.css
+++ b/media/css/codernote.css
@@ -169,6 +169,10 @@ a img {
 }
 
 
+.detail {
+    margin-top: 0.25em;
+}
+
 .detail select {
     height: 20px;
 }
